--- a/backend/.env.example
+++ b/backend/.env.example
@@ -11,3 +11,6 @@ JWT_EXPIRES_IN=7d
 
 # CORS
 CORS_ORIGIN=http://localhost:3000
+
+# Vercel Blob Storage (get token from Vercel dashboard)
+BLOB_READ_WRITE_TOKEN=your_vercel_blob_token_here
