--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
   "author": "Clinix Sphere Team",
   "license": "MIT",
   "dependencies": {
+    "@vercel/blob": "^0.23.4",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
